# Mono-embedding

./: CMakeLists.txt  readme.md
cpp/: CMakeLists.txt  cmake_install.cmake  cpp.vcxproj  cpp.vcxproj.filters  main.c
csharp/: CMakeLists.txt  csharp.csproj  main.cs
csharp/Properties/: AssemblyInfo.cs
